# pretty-bytes

./: Cargo.toml  cargo  readme.md
benches/: benchmark.rs
src/: lib.rs  main.rs
src/pretty_bytes_lib/: constants.rs  mod.rs  options.rs
tests/: pretty_bytes.rs
