[package]
name = "pretty-bytes-rust"
description = "Rust library that takes a number that represent a byte and returns a string that is prettier to read for a human"
version = "0.3.0"
edition = "2021"
authors = ["Patrick Desjardins <mrdesjardins@gmail.com>"]
homepage = "https://github.com/MrDesjardins/pretty-bytes"
repository = "https://github.com/MrDesjardins/pretty-bytes"
license = "Apache-2.0"
keywords = ["pretty-bytes", "size", "format-bytes", "number-format", "format-number"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false